--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,3 @@
-py -m pip install tushare
-py -m pip install pandas
-py -m pip install streamlit
+pip install tushare
+pip install pandas
+pip install streamlit
